res/examples/invalid/const_decl_in_grouping_parans.eg
(const a = 123;);

// out: SyntaxError: unexpected "const"; expected: ["\"!\"", "\"(\"", "\")\"", "\"-\"", "\"..\"", "\"[\"", "\"false\"", "\"if\"", "\"true\"", "\"{\"", "identifier", "number", "string"]
// out: SyntaxError: unexpected ")"; expected: ["\"!\"", "\"(\"", "\"-\"", "\"..\"", "\"[\"", "\"assert_type\"", "\"const\"", "\"false\"", "\"fn\"", "\"if\"", "\"let\"", "\"return\"", "\"true\"", "\"type\"", "\"{\"", "\"}\"", "identifier", "number", "string"]